--- a/source/index.html
+++ b/source/index.html
@@ -162,121 +162,102 @@
         <h3 class="catalog__subtitle subtitle">Дома для аренды</h3>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <a class="catalog__link" href="#">
-              <img class="catalog__img" src="" alt="Фото современного дома">
-            </a>
-            <div class="catalog__wrapper">
-              <a href="product-toys.html" class="catalog__link catalog__link--subtitle">Современная классика</a>
-              <p class="catalog__description">Площадь — 186 м2</p>
+            <picture>
+              <source type="image/webp" srcset="img/image_catalog_1@1x.webp 1x, img/image_catalog_1@2x.webp 2x">
+              <img class="catalog__img" src="img/image_catalog_1@1x.jpg" width="327" height="220"
+                alt="Фото лесного дом у пруда" srcset="img/image_catalog_1@2x.jpg 2x">
+            </picture>
+            <div class="catalog__inner">
+              <h4 class="catalog__item-name">Современная классика</h4>
+              <p class="catalog__text">Площадь — 186 м2</p>
               <dl class="catalog__description properties">
-                <div class="properties__wrapper">
-                  <dt class="properties__item">комнат</dt>
-                  <dd class="properties__description">5</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">спальни</dt>
-                  <dd class="properties__description">3</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">этажа</dt>
-                  <dd class="properties__description">2</dd>
-                </div>
+                <dt class="properties__item">комнат</dt>
+                <dd class="properties__description">5</dd>
+                <dt class="properties__item">спальни</dt>
+                <dd class="properties__description">3</dd>
+                <dt class="properties__item">этажа</dt>
+                <dd class="properties__description">2</dd>
               </dl>
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link" href="#">
-              <img class="catalog__img" src="" alt="Фото дома на берегу озера">
-            </a>
-            <div class="catalog__wrapper">
-              <a href="product-toys.html" class="catalog__link catalog__link--subtitle">Дом на берегу озера</a>
-              <p class="catalog__description">Площадь — 242 м2</p>
+            <picture>
+              <source type="image/webp" srcset="img/image_catalog_2@1x.webp 1x, img/image_catalog_2@2x.webp 2x">
+              <img class="catalog__img" src="img/image_catalog_1@2x.jpg" width="327" height="220"
+                alt="Фото лесного дом у пруда" srcset="img/image_catalog_2@2x.jpg 2x">
+            </picture>
+            <div class="catalog__inner">
+              <h4 class="catalog__item-name">Дом на берегу озера</h4>
+              <p class="catalog__text">Площадь — 242 м2</p>
               <dl class="catalog__description properties">
-                <div class="properties__wrapper">
-                  <dt class="properties__item">комнат</dt>
-                  <dd class="properties__description">7</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">спальни</dt>
-                  <dd class="properties__description">4</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">этажа</dt>
-                  <dd class="properties__description">2</dd>
-                </div>
+                <dt class="properties__item">комнат</dt>
+                <dd class="properties__description">7</dd>
+                <dt class="properties__item">спальни</dt>
+                <dd class="properties__description">4</dd>
+                <dt class="properties__item">этажа</dt>
+                <dd class="properties__description">2</dd>
               </dl>
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link" href="#">
-              <img class="catalog__img" src="" alt="Фото особняк в лесу">
-            </a>
-            <div class="catalog__wrapper">
-              <a href="product-toys.html" class="catalog__link catalog__link--subtitle">Особняк в лесу</a>
-              <p class="catalog__description">Площадь — 406 м2</p>
+            <picture>
+              <source type="image/webp" srcset="img/image_catalog_3@1x.webp 1x, img/image_catalog_3@2x.webp 2x">
+              <img class="catalog__img" src="img/image_catalog_3@1x.jpg" width="327" height="220"
+                alt="Фото лесного дом у пруда" srcset="img/image_catalog_3@2x.jpg 2x">
+            </picture>
+            <div class="catalog__inner">
+              <h4 class="catalog__item-name">Особняк в лесу</h4>
+              <p class="catalog__text">Площадь — 406 м2</p>
               <dl class="catalog__description properties">
-                <div class="properties__wrapper">
-                  <dt class="properties__item">комнат</dt>
-                  <dd class="properties__description">12</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">спален</dt>
-                  <dd class="properties__description">8</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">этажа</dt>
-                  <dd class="properties__description">2</dd>
-                </div>
+                <dt class="properties__item">комнат</dt>
+                <dd class="properties__description">12</dd>
+                <dt class="properties__item">спален</dt>
+                <dd class="properties__description">8</dd>
+                <dt class="properties__item">этажа</dt>
+                <dd class="properties__description">2</dd>
               </dl>
             </div>
           </li>
           <li class="catalog__item">
-            <a class="catalog__link" href="#">
-              <img class="catalog__img" src="" alt="Фото домика на дереве">
-            </a>
-            <div class="catalog__wrapper">
-              <a href="product-toys.html" class="catalog__link catalog__link--subtitle">Домик на дереве</a>
-              <p class="catalog__description">Площадь — 75 м2</p>
+            <picture>
+              <source type="image/webp" srcset="img/image_catalog_4@1x.webp 1x, img/image_catalog_4@2x.webp 2x">
+              <img class="catalog__img" src="img/image_catalog_4@1x.jpg" width="327" height="220"
+                alt="Фото лесного дом у пруда" srcset="img/image_catalog_4@2x.jpg 2x">
+            </picture>
+            <div class="catalog__inner">
+              <h4 class="catalog__item-name">Домик на дереве</h4>
+              <p class="catalog__text">Площадь — 75 м2</p>
               <dl class="catalog__description properties">
-                <div class="properties__wrapper">
-                  <dt class="properties__item">комнат</dt>
-                  <dd class="properties__description">3</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">спальни</dt>
-                  <dd class="properties__description">2</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">этаж</dt>
-                  <dd class="properties__description">1</dd>
-                </div>
+                <dt class="properties__item">комнат</dt>
+                <dd class="properties__description">3</dd>
+                <dt class="properties__item">спальни</dt>
+                <dd class="properties__description">2</dd>
+                <dt class="properties__item">этаж</dt>
+                <dd class="properties__description">1</dd>
               </dl>
             </div>
           </li>
-          <li class="catalog__item">
-            <a class="catalog__link" href="#">
-              <img class="catalog__img" src="" alt="Фото лесного дом у пруда">
-            </a>
-            <div class="catalog__wrapper">
-              <a href="product-toys.html" class="catalog__link catalog__link--subtitle">Лесной дом у пруда</a>
-              <p class="catalog__description">Площадь — 81 м2</p>
+          <li class="catalog__item catalog__item--vertical">
+            <picture>
+              <source type="image/webp" srcset="img/image_catalog_5@1x.webp 1x, img/image_catalog_5@2x.webp 2x">
+              <img class="catalog__img" src="img/image_catalog_5@1x.jpg" width="327" height="198"
+                alt="Фото лесного дом у пруда" srcset="img/image_catalog_5@2x.jpg 2x">
+            </picture>
+            <div class="catalog__inner">
+              <h4 class="catalog__item-name">Лесной дом у пруда</h4>
+              <p class="catalog__text">Площадь — 81 м2</p>
               <dl class="catalog__description properties">
-                <div class="properties__wrapper">
-                  <dt class="properties__item">комнаты</dt>
-                  <dd class="properties__description">3</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">спальни</dt>
-                  <dd class="properties__description">2</dd>
-                </div>
-                <div class="properties__wrapper">
-                  <dt class="properties__item">этаж</dt>
-                  <dd class="properties__description">1</dd>
-                </div>
-              </dl>
+                <dt class="properties__item">комнаты</dt>
+                <dd class="properties__description">3</dd>
+                <dt class="properties__item">спальни</dt>
+                <dd class="properties__description">2</dd>
+                <dt class="properties__item">этаж</dt>
+                <dd class="properties__description">1</dd>
             </div>
-          </li>
-        </ul>
+            </dl>
+      </div>
+      </li>
+      </ul>
       </div>
     </section>
     <section class="page-main__request request">
