--- a/source/index.html
+++ b/source/index.html
@@ -278,11 +278,12 @@
               </div>
               <div class="form__inner">
                 <label for="name" class="form__title">Имя</label>
-                <input type="text" name="name" id="name" placeholder="Джон" class="form__input" required>
+                <input type="text" name="name" id="name" placeholder="Джон" class="form__input js-form__input" required>
               </div>
               <div class="form__inner">
                 <label for="surname" class="form__title">Фамилия</label>
-                <input type="text" name="surname" id="surname" placeholder="Смит" class="form__input" required>
+                <input type="text" name="surname" id="surname" placeholder="Смит" class="form__input js-form__input"
+                  required>
               </div>
             </div>
           </fieldset>
@@ -291,14 +292,14 @@
             <div class="form__wrapper form__wrapper--contacts">
               <div class="form__inner">
                 <label for="email" class="form__title">E-mail</label>
-                <input type="email" name="email" id="email" placeholder="johnsmith@gmail.com" class="form__input"
-                  required>
+                <input type="email" name="email" id="email" placeholder="johnsmith@gmail.com"
+                  class="form__input js-form__input" required>
               </div>
               <div class="form__inner">
                 <label for="phone" class="form__title">Телефон</label>
                 <input type="tel" name="phone" id="phone" placeholder="+7 999 999-99-99"
-                  pattern="8\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" class="form__input"
-                  required>
+                  pattern="8\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}"
+                  class="form__input js-form__input" required>
               </div>
             </div>
           </fieldset>
@@ -306,7 +307,7 @@
             <legend class="visually-hidden">Согласия</legend>
             <div class="form__wrapper form__wrapper--consent">
               <label class="form__name form__name--consent">
-                <input class="form__check visually-hidden" type="checkbox" name="personel" value="agree">
+                <input class="form__check visually-hidden" type="checkbox" name="personel" value="agree" required>
                 <span class="form__checkbox"></span>
                 <span class="form__title form__title--consent">Согласие на обработку персональных данных</span>
               </label>
@@ -350,6 +351,7 @@
       </svg>
     </button>
   </div>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
