--- a/source/index.html
+++ b/source/index.html
@@ -330,7 +330,7 @@
 
   <footer class="page-footer">
     <div class="page-footer__wrapper container">
-      <a class="page-footer__logo logo">
+      <a href="#" class="page-footer__logo logo">
         <img src="img/logo-footer.svg" width="97" height="30" alt="Alt Home Загородные дома в аренду" class="logo__img">
       </a>
       <div class="page-footer__nav navigation">
